# cpp-backend-core

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml
config/: app.json
docker/: Dockerfile
docs/: demo.md
include/app/: application.hpp
include/config/: app_config.hpp
include/core/: app_error.hpp
include/http/: http_server.hpp  request_context.hpp
include/logging/: logger.hpp
src/: main.cpp
src/app/: application.cpp
src/config/: app_config.cpp
src/core/: app_error.cpp
src/http/: http_server.cpp  request_context.cpp
src/logging/: logger.cpp
tests/: config_test.cpp  error_test.cpp  request_context_test.cpp
